# base-inf

./: .gitattributes  .gitignore  Cargo.toml  README.md
dict/: LICENSE  dict.txt.big
src/: lib.rs  main.rs  tags.rs
